---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed various related crashes when deleting all the lines on a subfloor (#182)
    - Fixed a crash when trying to migrate from a mod version of 1.1.64 or earlier (#190) (Thanks francoiscampbell!)
    - Fixed an issue when trying to open top level byproducts and ingredients in Recipe Book (#191)

---------------------------------------------------------------------------------------------------
Version: 1.1.75
Date: 22. 11. 2023
  Bugfixes:
    - Fix crash when clicking on any line product (#167)
    - Fix crash when opening the tutorial dialog (#176)
    - Fixed a crash when trying to create a combinator containing modules (#174)
    - Fixed an icon not being shown properly in languages other than English

---------------------------------------------------------------------------------------------------
Version: 1.1.74
Date: 19. 11. 2023
  Bugfixes:
    - Fixed an issue that could cause several different crashes after a save/load cycle
    - Fixed a crash when trying to set an amount on top level or recipe ingredients
    - Fixed a crash when trying to put certain items into a combinator
    - Fixed a crash when deleting a factory in certain situations (potentially)

---------------------------------------------------------------------------------------------------
Version: 1.1.73
Date: 17. 11. 2023
  Changes:
    - Rewrote basically the entire data storage backend of the mod. This is not a feature in itself, but lays the groundwork for future ones, like undo/redo, multiplayer support, and more. What it also means is a period of lower stability, as thousands of lines of code were changed. The mod was beta-tested, so the worst issues should be fixed, but there will still be some bugs.